Migrating to use Spring boot 3.5.x